@@ -100,9 +100,12 @@ SCP_HOST[string]=localhost
 # User under which to run solutions (ID or name)
 RUNUSER[string]=domjudge-run
 
-# Users under which programs are allowed to run with runguard
+# Users under which programs are allowed to run with runguard:
+# Be careful supplying users here as it might introduce a security
+# vulnerability which allows anyone with access to the runguard
+# binary to run processes as the specified user.
 # Must be a comma-separated string of ID's and/or names.
-VALID_USERS[eval,string]=$USER,$RUNUSER,nobody
+VALID_USERS[eval,string]=$RUNUSER,nobody
 
 # Run solutions in a chroot environment? (gives better security)
 USE_CHROOT=1
